# static-executor

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs
static-executor/: Cargo.toml
static-executor-cortex-m/: Cargo.toml
static-executor-cortex-m/src/: lib.rs
static-executor-macro/: Cargo.toml
static-executor-macro/src/: lib.rs
static-executor-macros/: Cargo.toml
static-executor-macros/src/: lib.rs
static-executor-std/: Cargo.toml
static-executor-std/src/: lib.rs
static-executor/examples/: simple.rs
static-executor/src/: lib.rs
