[workspace]
members = [
    'static-executor',
    'static-executor-macro',
]

[patch.crates-io]
panic-probe = { git = "https://github.com/knurling-rs/probe-run", branch="main" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
defmt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
