[package]
name = "static-executor"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[dependencies]
static-executor-macro = { version = "0.1.0", path = "../static-executor-macro" }
defmt = { version = "0.1.0", optional = true, git = "https://github.com/knurling-rs/defmt", branch="main" }

[dev-dependencies]
async-io = "0.2.6"
static-executor-std = { version = "0.1.0", path = "../static-executor-std" }
